# SL2CBoosters

./: .gitignore  .gitmodules  CMakeLists.txt  Manifest.toml  Project.toml  README.md
cmake/: Config.cmake.in  FindGMP.cmake  FindJulia.cmake  FindMPC.cmake  FindMPFR.cmake
data/vertex/immirzi_0.123/boosters/: b4__2-2-2-2__gf-1__imm-0.123__dl-1.sl2t
src/: SL2CBoosters.jl
src/c/: b4.c  b4_qagp.c  boosters.c  boosters.h  common.h  config.h  error.h  setup.c  sl2cfoam.c  sl2cfoam.h  verb.h
test/: runtests.jl
